k8s/apps/swaggerapi/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: swaggerapi
  namespace: cwx
spec:
  ports:
  - port: 80
    targetPort: 80
    name: http
    protocol: TCP
  selector:
    app: swaggerapi
