k8s/apps/swaggerapi/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: swaggerapi-route
  namespace: cwx
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`swagger.chenwx.top`)
      kind: Rule
      services:
        - name: swaggerapi
          namespace: cwx
          port: 80
